# realtime-analytics

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
analytics_api/: .env.example  Dockerfile  main.py  pyproject.toml
analytics_api/settings/: config.py  db_setting.py
analytics_api/src/: kafka_config.py
analytics_api/src/api/: depensens.py  routers.py
analytics_api/src/api/endpoints/: __init__.py  analytics.py
analytics_api/src/api/web_socket/: __init__.py  ws_analytics.py
analytics_api/src/celery_core/: __init__.py  celery_app.py  celery_worker.py  tasks.py
analytics_api/src/models/: event.py
analytics_api/src/repositories/: analytics.py
analytics_api/src/schemas/: stats.py
analytics_api/src/service/: kafka_consumer.py  s3_client.py  s3_service.py
data_spamer/: Dockerfile  event_generator.py  main.py
event_processor/: .env.example  Dockerfile  main.py  pyproject.toml
event_processor/alembic/: env.py
event_processor/alembic/versions/: 2bca151d84fb_initial_migration.py
event_processor/settings/: config.py  db_setting.py
event_processor/src/models/: base.py
event_processor/src/repositories/: base.py  event.py
event_processor/src/service/: kafka_consumer.py  kafka_producer.py  processing_service.py
user_api/: Dockerfile  config.py  main.py  pyproject.toml
user_api/api/: depensens.py  routers.py
user_api/api/endpoints/: __init__.py  event.py
user_api/schemas/: event.py
user_api/services/: kafka_producer.py
